# discord-bot-v2

./: .gitignore  Aptfile  LICENSE  Pipfile  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt  start.sh
discord_bot_v2/: main.py
discord_bot_v2/python_script/: activity.py  calculator.py  command.py  game.py  reaction.py  sheet.py
discord_bot_v2/resource/cairo/: clear.py
python_script/: activity.py  calculator.py  command.py  dictionary.py  everyday_task.py  game.py  reaction.py  sheet.py  utils.py
resource/cairo/: clear.py
